# Learning-AI

./: .env  cognition.py  index.py  knowledge.py  langgraph_demo.py  learning.py  main.py  message_placeholder.py  notes  pyproject.toml  rag.py  requirement.txt  rl.py  script.py  to_know.txt  tools.py
persist_birds/: chroma.sqlite3
